Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11447

Fetching arrays/structs crashes Impala if result caching is enabled

    XMLWordPrintableJSON

Details

    • ghx-label-9

    Description

      HS2ColumnarResultSet::AddRows(const QueryResultSet* other ... ) is not prepared for handling complex types: https://github.com/apache/impala/blob/1d16367afb1e520bae5992c1e6c92b4fb41d2655/be/src/service/query-result-set.cc#L412

      A debug build will hit the DCHECK, while a release build will crash a bit later. This didn't come up during testing as impala-shell doens't set impala.resultset.cache.size

      Attachments

        Activity

          People

            csringhofer Csaba Ringhofer
            csringhofer Csaba Ringhofer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: