IMPALA-11447: Fix crash when fetching arrays/structs with result caching

Some parts of HS2ColumnarResultSet were not prepared for returning
non-scalar types. This code only runs if impala.resultset.cache.size
is set, which is not the case in most of tests. The issue was caught
with Hue, which uses result caching.

Testing:
- Added a regression test in test_fetch_first.py, which contained
  other tests that used result caching.
- It turned out that some tests in the file did not run at all,
  as @needs_session() needs the parenthesis at the end. For this
  reason some test fixes were added to run them correctly, though
  these changes are totally unrelated to the current issue.

Change-Id: Ia4dd8f76187dc3555207e2d30d46d811e0a7a126
Reviewed-on: http://gerrit.cloudera.org:8080/18768
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Wenzhe Zhou <wzhou@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>